--- a/VirtualWorkout/app/build.gradle
+++ b/VirtualWorkout/app/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'com.google.firebase:firebase-database:19.2.1'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
@@ -42,5 +43,9 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:27.0.0')
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'com.google.firebase:firebase-core:9.0.0'
-    implementation 'com.google.firebase:firebase-database:9.0.0'
+
+    //Agora RTC SDK for video call
+    implementation 'io.agora.rtc:full-sdk:3.0.0.2'
+    //Agora RTM SDK for chat messaging
+    implementation 'io.agora.rtm:rtm-sdk:1.2.2'
 }
