--- a/VirtualWorkoutV2/app/src/main/AndroidManifest.xml
+++ b/VirtualWorkoutV2/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
         <activity android:name=".LobbyActivity"></activity>
         <activity android:name=".LobbyWorkoutActivity"></activity>
         <activity android:name=".ChooseWorkoutActivity"></activity>
+        <activity android:name=".StartingWorkoutActivity" />
         <activity android:name=".FindLobbyActivity" />
         <activity android:name=".WorkoutsActivity" />
         <activity android:name=".FriendsActivity" />
