--- a/VirtualWorkoutV2/app/src/main/AndroidManifest.xml
+++ b/VirtualWorkoutV2/app/src/main/AndroidManifest.xml
@@ -18,9 +18,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.VirtualWorkoutV2">
-        <activity android:name=".LobbyActivity"></activity>
-        <activity android:name=".LobbyWorkoutActivity"></activity>
-        <activity android:name=".ChooseWorkoutActivity"></activity>
+        <activity android:name=".InbetweenWorkoutsActivity"></activity>
+        <activity android:name=".LobbyActivity" />
+        <activity android:name=".LobbyWorkoutActivity" />
+        <activity android:name=".ChooseWorkoutActivity" />
         <activity android:name=".StartingWorkoutActivity" />
         <activity android:name=".FindLobbyActivity" />
         <activity android:name=".WorkoutsActivity" />
